/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package oop.vuelosfis.modelo;

/**
 *
 * @author CLIENTE
 */
public class ReservaDAO {
    
}
